Bug 15446 - DCERPC_PKT_CO_CANCEL and DCERPC_PKT_ORPHANED can't be parsed
Summary: DCERPC_PKT_CO_CANCEL and DCERPC_PKT_ORPHANED can't be parsed
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: DCE-RPCs and pipes (show other bugs)
Version: 4.18.5
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Jule Anger
QA Contact: Samba QA Contact
URL: https://gitlab.com/samba-team/samba/-...
Keywords:
Depends on:
Blocks:
 
Reported: 2023-08-04 12:01 UTC by Stefan Metzmacher
Modified: 2023-09-07 09:03 UTC (History)
2 users (show)

See Also:


Attachments
Patches for v4-19-test (12.28 KB, patch)
2023-08-08 09:05 UTC, Stefan Metzmacher
vl: review+
Details
Patches for v4-18-test (12.28 KB, patch)
2023-08-08 09:05 UTC, Stefan Metzmacher
vl: review+
Details
Patches for v4-17-test (12.28 KB, patch)
2023-08-08 09:06 UTC, Stefan Metzmacher
vl: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Stefan Metzmacher 2023-08-04 12:01:38 UTC
Looking at captures from Windows clients revealed that our idl
is not able to parse DCERPC_PKT_CO_CANCEL and DCERPC_PKT_ORPHANED pdus.
Comment 1 Samba QA Contact 2023-08-08 08:58:04 UTC
This bug was referenced in samba master:

c37adb762640b7df9731d6a60edce808aa8787f8
5c724a3e156ae734e4d187bf9639d895bb011834
9ec22e680249cfde06fb1a0a34fcc94d1f47002d
Comment 2 Stefan Metzmacher 2023-08-08 09:05:21 UTC
Created attachment 18034 [details]
Patches for v4-19-test
Comment 3 Stefan Metzmacher 2023-08-08 09:05:54 UTC
Created attachment 18035 [details]
Patches for v4-18-test
Comment 4 Stefan Metzmacher 2023-08-08 09:06:25 UTC
Created attachment 18036 [details]
Patches for v4-17-test
Comment 5 Jule Anger 2023-08-08 11:42:30 UTC
Pushed to autobuild-v4-{19,18,17}-test.
Comment 6 Samba QA Contact 2023-08-08 12:57:04 UTC
This bug was referenced in samba v4-18-test:

f2604db12b0a5da6ad3b28d4a0257ec1dd4a37fc
30f317cfb094db05abd3bd368806304be30f232b
1b3197ff477714239eca42722cc368c366827327
Comment 7 Samba QA Contact 2023-08-08 13:40:04 UTC
This bug was referenced in samba v4-17-test:

95bb8115a370e7d33222d1cb94959e69eae5d1d5
4233de9bd485f45dc44b19fc6fd7221c6bb9e2e0
3a0ae0c6f0195eead91cc20d27ed227c63c7441e
Comment 8 Samba QA Contact 2023-08-08 14:23:03 UTC
This bug was referenced in samba v4-19-test:

a436b0d163019f43b10ce0c16bcc7210f7df9f1a
b9e48047ad1e60f0e30ebb3b26921a7ca3054f71
f3acbab97f00aa4047d6730fd328400e4fb06c49
Comment 9 Jule Anger 2023-08-09 07:34:11 UTC
Closing out bug report.

Thanks!
Comment 10 Samba QA Contact 2023-08-16 16:58:45 UTC
This bug was referenced in samba v4-18-stable (Release samba-4.18.6):

f2604db12b0a5da6ad3b28d4a0257ec1dd4a37fc
30f317cfb094db05abd3bd368806304be30f232b
1b3197ff477714239eca42722cc368c366827327
Comment 11 Samba QA Contact 2023-08-18 11:22:19 UTC
This bug was referenced in samba v4-19-stable (Release samba-4.19.0rc3):

a436b0d163019f43b10ce0c16bcc7210f7df9f1a
b9e48047ad1e60f0e30ebb3b26921a7ca3054f71
f3acbab97f00aa4047d6730fd328400e4fb06c49
Comment 12 Samba QA Contact 2023-09-07 09:03:03 UTC
This bug was referenced in samba v4-17-stable (Release samba-4.17.11):

95bb8115a370e7d33222d1cb94959e69eae5d1d5
4233de9bd485f45dc44b19fc6fd7221c6bb9e2e0
3a0ae0c6f0195eead91cc20d27ed227c63c7441e